#ipd treatments chart alignment in the dialog window - fixed

--- a/ui/app/styles/bahmni-components/_ngDialog.scss
+++ b/ui/app/styles/bahmni-components/_ngDialog.scss
@@ -37,7 +37,7 @@
     }
     table.ipd-investigation td {
         display: block;
-        min-height: 2em;
+        height: 2em;
         text-align: left;
     }
 }
